Completed View My appointments for a doctor and create a medical history

--- a/MedicalAppointmentMVC/MedicalAppointmentMVC/Views/Patient_Medical_History/Index.cshtml
+++ b/MedicalAppointmentMVC/MedicalAppointmentMVC/Views/Patient_Medical_History/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Medical History</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -51,11 +51,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.recommendation)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.med_hist_id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.med_hist_id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.med_hist_id })
         </td>
     </tr>
 }
