--- a/MedicalAppointmentMVC/MedicalAppointmentMVC/Views/Patient_Medical_History/Create.cshtml
+++ b/MedicalAppointmentMVC/MedicalAppointmentMVC/Views/Patient_Medical_History/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h4>Create New History</h4>
 
 
 @using (Html.BeginForm()) 
@@ -12,11 +12,10 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Patient_Medical_History</h4>
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.ValidationSummary(false, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.patient_id, "patient_id", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.patient_id, "Patient Name", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("patient_id", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.patient_id, "", new { @class = "text-danger" })
