--- a/MedicalAppointmentMVC/MedicalAppointmentMVC/Views/Appointments/Create.cshtml
+++ b/MedicalAppointmentMVC/MedicalAppointmentMVC/Views/Appointments/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h4>Create Appointment</h4>
 
 
 @using (Html.BeginForm()) 
@@ -12,9 +12,9 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Appointment</h4>
+    
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.ValidationSummary(false, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.patient_id, "patient_id", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
