--- a/MedicalAppointmentMVC/MedicalAppointmentMVC/Views/Appointments/Create.cshtml
+++ b/MedicalAppointmentMVC/MedicalAppointmentMVC/Views/Appointments/Create.cshtml
@@ -16,7 +16,7 @@
         <hr />
         @Html.ValidationSummary(false, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.patient_id, "patient_id", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.patient_id, "Patient Name", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("patient_id", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.patient_id, "", new { @class = "text-danger" })
@@ -24,7 +24,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.doctor_id, "doctor_id", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.doctor_id, "Doctor Name", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("doctor_id", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.doctor_id, "", new { @class = "text-danger" })
